crates/biome_cli/tests/snapshots/main_cases_reporter_json/reports_diagnostics_json_with_backslash_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=json-pretty 'src\app\main.ts'
```

## `src\app\main.ts`

```ts
function NaN() {}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
The `json` and `json-pretty` reporters are experimental and may change in patch releases.
```

```block
{
	"summary": {
		"changed": 0,
		"unchanged": 1,
		"matches": 0,
		"duration": "<TIME>",
		"errors": 2,
		"warnings": 1,
		"infos": 0,
		"skipped": 0,
		"suggestedFixesSkipped": 0,
		"diagnosticsNotPrinted": 0,
		"scannerDuration": "<TIME>"
	},
	"diagnostics": [
		{
			"severity": "warning",
			"message": "This function NaN is unused.",
			"category": "lint/correctness/noUnusedVariables",
			"location": {
				"path": "src\\app\\main.ts",
				"start": { "line": 1, "column": 10 },
				"end": { "line": 1, "column": 13 }
			},
			"advices": []
		},
		{
			"severity": "error",
			"message": "Do not shadow the global \"NaN\" property.",
			"category": "lint/suspicious/noShadowRestrictedNames",
			"location": {
				"path": "src\\app\\main.ts",
				"start": { "line": 1, "column": 10 },
				"end": { "line": 1, "column": 13 }
			},
			"advices": []
		},
		{
			"severity": "error",
			"message": "Formatter would have printed the following content:",
			"category": "format",
			"location": {
				"path": "src\\app\\main.ts",
				"start": { "line": 0, "column": 0 },
				"end": { "line": 0, "column": 0 }
			},
			"advices": []
		}
	],
	"command": "check"
}

```
